# MouthWrite-Linux

./: .gitignore  Cargo.toml  README.md  config_template.toml
packaging/systemd/: mouthwrite.service
scripts/: package_release.sh
src/: app_core.rs  config.rs  error.rs  logging.rs  main.rs
src/audio/: mod.rs  player.rs  recorder.rs
src/input/: evdev_hook.rs  mod.rs  uinput_sim.rs
src/network/: asr_http.rs  llm_sse.rs  mod.rs
